--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "themes",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
